--- a/src/main/resources/org/andy/musicque/main-view.fxml
+++ b/src/main/resources/org/andy/musicque/main-view.fxml
@@ -9,29 +9,41 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.canvas.Canvas?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.andy.musicque.controller.MusicqueController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml"
+            fx:controller="org.andy.musicque.controller.MusicqueController">
+    <top>
 
-    <HBox>
-        <Region HBox.hgrow="ALWAYS" />
+    </top>
+    <center>
+        <VBox>
+            <padding>
+                <Insets left="20.0" right="20.0"/>
+            </padding>
+            <HBox>
+                <Region HBox.hgrow="ALWAYS"/>
+                <Canvas fx:id="spectrumCanvas"/>
+                <Region HBox.hgrow="ALWAYS"/>
+            </HBox>
+            <Label fx:id="songTitleLabel"/>
+            <Button fx:id="btnPlay" text="Play!" onAction="#onPlayButtonClick"/>
+            <Button fx:id="btnRepayOne" text="Replay OFF" onAction="#onReplayOneClick"/>
 
-        <Canvas fx:id="spectrumCanvas"/>
+        </VBox>
+    </center>
+    <bottom>
+        <VBox>
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0"/>
+            </padding>
+            <HBox alignment="CENTER" spacing="10">
+                <Label fx:id="currentTimeLabel" text="00:00"/>
+                <Slider fx:id="progressSlider" HBox.hgrow="ALWAYS"/>
+                <Label fx:id="totalTimeLabel" text="00:00"/>
+                <Slider fx:id="volumeSlider" max="1.0" value="0.75"/>
+            </HBox>
+        </VBox>
+    </bottom>
 
-        <Region HBox.hgrow="ALWAYS" />
-    </HBox>
-    <Label fx:id="songTitleLabel"/>
-    <Button  fx:id="btnPlay" text="Play!" onAction="#onPlayButtonClick"/>
-    <Button  fx:id="btnRepayOne" text="Replay OFF" onAction="#onReplayOneClick"/>
 
-    <HBox alignment="CENTER" spacing="10">
-        <Label fx:id="currentTimeLabel" text="00:00"/>
-        <Slider fx:id="progressSlider" HBox.hgrow="ALWAYS"/>
-        <Label fx:id="totalTimeLabel" text="00:00"/>
-        <Slider fx:id="volumeSlider" max="1.0" value="0.75" />
-    </HBox>
-
-
-</VBox>
+</BorderPane>
