--- a/src/main/resources/org/andy/musicque/main-view.fxml
+++ b/src/main/resources/org/andy/musicque/main-view.fxml
@@ -1,49 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.layout.BorderPane?>
 <BorderPane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.andy.musicque.controller.MusicqueController">
-    <top>
+            fx:controller="org.andy.musicque.controller.MusicqueController"
+            prefWidth="700" prefHeight="500"
+            styleClass="root-pane">
 
-    </top>
+    <!-- Center: Spectrum + Song title -->
     <center>
-        <VBox>
-            <padding>
-                <Insets left="20.0" right="20.0"/>
-            </padding>
-            <HBox>
-                <Region HBox.hgrow="ALWAYS"/>
-                <Canvas fx:id="spectrumCanvas"/>
-                <Region HBox.hgrow="ALWAYS"/>
-            </HBox>
-            <Label fx:id="songTitleLabel"/>
-            <Button fx:id="btnPlay" text="Play!" onAction="#onPlayButtonClick"/>
-            <Button fx:id="btnRepayOne" text="Replay OFF" onAction="#onReplayOneClick"/>
-
+        <VBox alignment="CENTER" spacing="15">
+            <Canvas fx:id="spectrumCanvas" width="600" height="200"/>
+            <Label fx:id="songTitleLabel" text="No song playing" styleClass="song-title"/>
         </VBox>
     </center>
+
+    <!-- Bottom: Controls -->
     <bottom>
-        <VBox>
-            <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0"/>
-            </padding>
+        <VBox spacing="15">
+            <HBox alignment="CENTER" spacing="20" styleClass="control-box">
+                <Button fx:id="btnPrev" text="⏮" styleClass="control-btn"/>
+                <Button fx:id="btnPlay" text="▶" onAction="#onPlayButtonClick" styleClass="control-btn"/>
+                <Button fx:id="btnNext" text="⏭" styleClass="control-btn"/>
+                <Button fx:id="btnRepayOne" text="🔁" visible="false" onAction="#onReplayOneClick" styleClass="control-btn"/>
+            </HBox>
+
             <HBox alignment="CENTER" spacing="10">
-                <Label fx:id="currentTimeLabel" text="00:00"/>
+                <Label fx:id="currentTimeLabel" text="00:00" styleClass="time-label"/>
                 <Slider fx:id="progressSlider" HBox.hgrow="ALWAYS"/>
-                <Label fx:id="totalTimeLabel" text="00:00"/>
-                <Slider fx:id="volumeSlider" max="1.0" value="0.75"/>
+                <Label fx:id="totalTimeLabel" text="00:00" styleClass="time-label"/>
+                <Slider fx:id="volumeSlider" max="1.0" value="0.75" prefWidth="100"/>
             </HBox>
         </VBox>
     </bottom>
-
-
 </BorderPane>
