--- a/src/main/resources/org/andy/musicque/main-view.fxml
+++ b/src/main/resources/org/andy/musicque/main-view.fxml
@@ -11,8 +11,13 @@
 
 <BorderPane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.andy.musicque.controller.MusicqueController"
-            prefWidth="700" prefHeight="500"
+            prefWidth="900" prefHeight="500"
             styleClass="root-pane">
+
+    <!-- Top: Progress Slider -->
+
+
+
 
     <!-- Center: Spectrum + Song title -->
     <center>
@@ -24,19 +29,22 @@
 
     <!-- Bottom: Controls -->
     <bottom>
-        <VBox spacing="15">
+        <VBox spacing="10" alignment="CENTER">
+            <!-- Time labels + volume -->
+            <HBox alignment="CENTER" spacing="10">
+                <Label fx:id="currentTimeLabel" text="00:00" styleClass="time-label"/>
+                <Slider fx:id="progressSlider" prefWidth="600" styleClass="progress-slider"/>
+                <Label fx:id="totalTimeLabel" text="00:00" styleClass="time-label"/>
+                <Slider fx:id="volumeSlider" max="1.0" value="0.75" styleClass="progress-slider" prefWidth="100"/>
+            </HBox>
+
+            <!-- Playback buttons -->
             <HBox alignment="CENTER" spacing="20" styleClass="control-box">
                 <Button fx:id="btnPrev" text="⏮" styleClass="control-btn"/>
                 <Button fx:id="btnPlay" text="▶" onAction="#onPlayButtonClick" styleClass="control-btn"/>
                 <Button fx:id="btnNext" text="⏭" styleClass="control-btn"/>
                 <Button fx:id="btnRepayOne" text="🔁" visible="false" onAction="#onReplayOneClick" styleClass="control-btn"/>
-            </HBox>
-
-            <HBox alignment="CENTER" spacing="10">
-                <Label fx:id="currentTimeLabel" text="00:00" styleClass="time-label"/>
-                <Slider fx:id="progressSlider" HBox.hgrow="ALWAYS"/>
-                <Label fx:id="totalTimeLabel" text="00:00" styleClass="time-label"/>
-                <Slider fx:id="volumeSlider" max="1.0" value="0.75" prefWidth="100"/>
+                <Button fx:id="btnFavorite" text="❤" styleClass="control-btn"/>
             </HBox>
         </VBox>
     </bottom>
