--- a/src/main/resources/org/andy/musicque/main-view.fxml
+++ b/src/main/resources/org/andy/musicque/main-view.fxml
@@ -33,8 +33,9 @@
             <!-- Time labels + volume -->
             <HBox alignment="CENTER" spacing="10">
                 <Label fx:id="currentTimeLabel" text="00:00" styleClass="time-label"/>
-                <Slider fx:id="progressSlider" prefWidth="600" styleClass="progress-slider"/>
+                <Slider fx:id="progressSlider" prefWidth="550" styleClass="progress-slider"/>
                 <Label fx:id="totalTimeLabel" text="00:00" styleClass="time-label"/>
+                <Button fx:id="btnVolume" text="🔊" onAction="#onVolumeClick"  styleClass="control-btn"/>
                 <Slider fx:id="volumeSlider" max="1.0" value="0.75" styleClass="progress-slider" prefWidth="100"/>
             </HBox>
 
@@ -43,8 +44,8 @@
                 <Button fx:id="btnPrev" text="⏮" styleClass="control-btn"/>
                 <Button fx:id="btnPlay" text="▶" onAction="#onPlayButtonClick" styleClass="control-btn"/>
                 <Button fx:id="btnNext" text="⏭" styleClass="control-btn"/>
-                <Button fx:id="btnRepayOne" text="🔁" visible="false" onAction="#onReplayOneClick" styleClass="control-btn"/>
-                <Button fx:id="btnFavorite" text="❤" styleClass="control-btn"/>
+                <Button fx:id="btnRepayOne" text="🔁"  onAction="#onReplayOneClick" styleClass="control-btn"/>
+                <Button fx:id="btnFavorite" text="❤"  onAction="#onFavoriteClick"  styleClass="control-btn"/>
             </HBox>
         </VBox>
     </bottom>
